# Logger

./: .appveyor.yml  appveyor.yml  build.py  conanfile.py
src/: CMakeLists.txt  Log.cpp  Logger.cpp
src/Logger/: Log.h  Logger.h  LoggerInterface.h  LoggerNazwaKlasy.h  LoggerSymbol.h
test_package/: example.cpp
